# todo-agent

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  example.env  setup.cfg
agent/: ai.py  bootstrap.py  main.py  prompt.txt  prompts.py  todo.py  tools.py  utils.py
